--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>ValImoveis</title>
   <base href="/">
+  <title>Val Imóveis - Especialista Imobiliária</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Val Imóveis - Ve  " />
+  <meta name="author" content="valdoveste.com.br" />
+  <meta name="keywords"
+    content="Corretora, Corretora Imóveis, Venda, Venda Aparamento, Alugel, Alugel Apartamento, São Paulo, Especialista Imobiliária" />
+
+  <meta property="og:title" content="" />
+  <meta property="og:image" content="" />
+  <meta property="og:url" content="" />
+  <meta property="og:site_name" content="" />
+  <meta property="og:description" content="" />
+  <meta name="twitter:title" content="" />
+  <meta name="twitter:image" content="" />
+  <meta name="twitter:url" content="" />
+  <meta name="twitter:card" content="" />
+
+  <link rel="icon" type="image/x-icon" href="efavicon.ico">
+  <link rel="stylesheet" href="styles.scss">
+
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
