Implemating bootstrap libs and filling meta propertys

--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Val Imóveis - Ve  " />
+  <meta name="description"
+    content="Val Imóveis, é uma experiente corretora atuante no mercado imobiliário desde 2010, especializada em documentação, aprovação de financiamento e registro tanto Creci 120.862 quanto CNAI 37741, perícia e avaliação imobiliária. Colaborando com construtoras renomadas como Diálogo, Lorenzini, Cyrela, Evem e Econ Construtora, ela oferece uma variedade de imóveis, tanto na planta quanto prontos para morar, com foco especial no programa Minha Casa Minha Vida. Para informações detalhadas sobre oportunidades e condições, consulte Val Imóveis, comprometida em tornar realidade o seu sonho imobiliário." />
   <meta name="author" content="valdoveste.com.br" />
   <meta name="keywords"
-    content="Corretora, Corretora Imóveis, Venda, Venda Aparamento, Alugel, Alugel Apartamento, São Paulo, Especialista Imobiliária" />
+    content="Corretora, Corretora Imóveis, Venda, Venda Aparamento, Alugel, Alugel Apartamento, Creci 120.862, CNAI 37741, Especialista Imobiliária, perícia e avaliação imobiliária" />
 
-  <meta property="og:title" content="" />
-  <meta property="og:image" content="" />
-  <meta property="og:url" content="" />
-  <meta property="og:site_name" content="" />
-  <meta property="og:description" content="" />
-  <meta name="twitter:title" content="" />
-  <meta name="twitter:image" content="" />
-  <meta name="twitter:url" content="" />
-  <meta name="twitter:card" content="" />
+  <meta property="og:title" content="Val Imóveis - Especialista Imobiliária" />
+  <meta property="og:image" content="valimoveis-midlogo.png" />
+  <meta property="og:url" content="https://val-imoveis.vercel.app/" />
+  <meta property="og:site_name" content="Val Imóveis - Especialista Imobiliária" />
+  <meta property="og:description"
+    content="Val Imóveis, é uma experiente corretora atuante no mercado imobiliário desde 2010, especializada em documentação, aprovação de financiamento e registro tanto Creci 120.862 quanto CNAI 37741, perícia e avaliação imobiliária. Colaborando com construtoras renomadas como Diálogo, Lorenzini, Cyrela, Evem e Econ Construtora, ela oferece uma variedade de imóveis, tanto na planta quanto prontos para morar, com foco especial no programa Minha Casa Minha Vida. Para informações detalhadas sobre oportunidades e condições, consulte Val Imóveis, comprometida em tornar realidade o seu sonho imobiliário." />
 
-  <link rel="icon" type="image/x-icon" href="efavicon.ico">
-  <link rel="stylesheet" href="styles.scss">
+  <meta name="twitter:title" content="Val Imóveis - Especialista Imobiliária" />
+  <meta name="twitter:image" content="valimoveis-midlogo.png" />
+  <meta name="twitter:url" content="https://val-imoveis.vercel.app/" />
+  <meta name="twitter:card" content="summary" />
+
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300' rel='stylesheet' type='text/css'>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
 </head>
 
 <body>
