Removing some of the desc text and putting an url on image

--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
-    content="Val Imóveis, é uma experiente corretora atuante no mercado imobiliário desde 2010, especializada em documentação, aprovação de financiamento e registro tanto Creci 120.862 quanto CNAI 37741, perícia e avaliação imobiliária. Colaborando com construtoras renomadas como Diálogo, Lorenzini, Cyrela, Evem e Econ Construtora, ela oferece uma variedade de imóveis, tanto na planta quanto prontos para morar, com foco especial no programa Minha Casa Minha Vida. Para informações detalhadas sobre oportunidades e condições, consulte Val Imóveis, comprometida em tornar realidade o seu sonho imobiliário." />
+    content="Val Imóveis experiente corretora atuante no mercado imobiliário desde 2010, especializada em documentação, aprovação de financiamento e registro tanto Creci 120.862 quanto CNAI 37741, perícia e avaliação imobiliária. Colaborando com construtoras renomadas como Diálogo, Lorenzini, Cyrela, Evem e Econ Construtora." />
   <meta name="author" content="valdoveste.com.br" />
   <meta name="keywords"
     content="Corretora, Corretora Imóveis, Venda, Venda Aparamento, Alugel, Alugel Apartamento, Creci 120.862, CNAI 37741, Especialista Imobiliária, perícia e avaliação imobiliária" />
 
   <meta property="og:title" content="Val Imóveis - Especialista Imobiliária" />
-  <meta property="og:image" content="valimoveis-midlogo.png" />
+  <meta property="og:image"
+    content="https://val-imoveis.pockethost.io/api/files/bcwmn8pz72ah4rh/q0km779hn04gh23/valimoveis_midlogo_O7OneisJub.png" />
   <meta property="og:url" content="https://val-imoveis.vercel.app/" />
   <meta property="og:site_name" content="Val Imóveis - Especialista Imobiliária" />
   <meta property="og:description"
-    content="Val Imóveis, é uma experiente corretora atuante no mercado imobiliário desde 2010, especializada em documentação, aprovação de financiamento e registro tanto Creci 120.862 quanto CNAI 37741, perícia e avaliação imobiliária. Colaborando com construtoras renomadas como Diálogo, Lorenzini, Cyrela, Evem e Econ Construtora, ela oferece uma variedade de imóveis, tanto na planta quanto prontos para morar, com foco especial no programa Minha Casa Minha Vida. Para informações detalhadas sobre oportunidades e condições, consulte Val Imóveis, comprometida em tornar realidade o seu sonho imobiliário." />
+    content="Val Imóveis experiente corretora atuante no mercado imobiliário desde 2010, especializada em documentação, aprovação de financiamento e registro tanto Creci 120.862 quanto CNAI 37741, perícia e avaliação imobiliária. Colaborando com construtoras renomadas como Diálogo, Lorenzini, Cyrela, Evem e Econ Construtora." />
 
   <meta name="twitter:title" content="Val Imóveis - Especialista Imobiliária" />
-  <meta name="twitter:image" content="valimoveis-midlogo.png" />
+  <meta name="twitter:image"
+    content="https://val-imoveis.pockethost.io/api/files/bcwmn8pz72ah4rh/q0km779hn04gh23/valimoveis_midlogo_O7OneisJub.png" />
   <meta name="twitter:url" content="https://val-imoveis.vercel.app/" />
   <meta name="twitter:card" content="summary" />
 
