--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt">
+<html lang="en">
 
 <head>
   <base href="/">
@@ -13,10 +13,18 @@
   <meta name="author" content="valdoveste.com.br" />
   <meta name="keywords"
     content="Corretora, Corretora Imóveis, Venda, Venda Aparamento, Alugel, Alugel Apartamento, Creci 120.862, CNAI 37741, Especialista Imobiliária, perícia e avaliação imobiliária" />
+
   <meta name="twitter:title" content="Val Imóveis - Especialista Imobiliária" />
   <meta name="twitter:image" content="https://i.imgur.com/RQXvZGj.png" />
   <meta name="twitter:url" content="https://val-imoveis.vercel.app/" />
   <meta name="twitter:card" content="summary" />
+
+  <meta property="og:title" content="Val Imóveis - Especialista Imobiliária" />
+  <meta property="og:image" content="https://i.imgur.com/RQXvZGj.png" />
+  <meta property="og:url" content="https://val-imoveis.vercel.app/" />
+  <meta property="og:site_name" content="Val Imóveis - Especialista Imobiliária" />
+  <meta property="og:description"
+    content="Val Imóveis experiente corretora atuante no mercado imobiliário desde 2010, especializada em documentação, aprovação de financiamento e registro tanto Creci 120.862 quanto CNAI 37741, perícia e avaliação imobiliária. Colaborando com construtoras renomadas como Diálogo, Lorenzini, Cyrela, Evem e Econ Construtora." />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
