--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- <base href="">
+  <base href="/">
   <title>Val Imóveis - Especialista Imobiliária</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
   <meta property="og:url" content="https://val-imoveis.vercel.app/" />
   <meta property="og:site_name" content="Val Imóveis - Especialista Imobiliária" />
   <meta property="og:description"
-    content="Val Imóveis experiente corretora atuante no mercado imobiliário desde 2010, especializada em documentação, aprovação de financiamento e registro tanto Creci 120.862 quanto CNAI 37741, perícia e avaliação imobiliária. Colaborando com construtoras renomadas como Diálogo, Lorenzini, Cyrela, Evem e Econ Construtora." /> -->
+    content="Val Imóveis experiente corretora atuante no mercado imobiliário desde 2010, especializada em documentação, aprovação de financiamento e registro tanto Creci 120.862 quanto CNAI 37741, perícia e avaliação imobiliária. Colaborando com construtoras renomadas como Diálogo, Lorenzini, Cyrela, Evem e Econ Construtora." />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
